--- a/CloudFunctionsDemo/ClientBasedFunctions/ClientBasedFunctions/ClientBasedFunctions.csproj
+++ b/CloudFunctionsDemo/ClientBasedFunctions/ClientBasedFunctions/ClientBasedFunctions.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>SEALAzureFuncClient</RootNamespace>
     <AssemblyName>SEALAzureFuncClient</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -16,6 +16,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -58,10 +59,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="SEALNet, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\Microsoft.Research.SEALNet.3.4.4\lib\netstandard2.0\SEALNet.dll</HintPath>
+    <Reference Include="SEALNet, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=AMD64">
+      <HintPath>..\packages\Microsoft.Research.SEALNet.3.5.1\lib\netstandard2.0\SEALNet.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -129,9 +130,7 @@
       <Link>README.md</Link>
     </None>
     <None Include="MATRIXMULTIPLICATION.md" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -141,11 +140,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Microsoft.Research.SEALNet.3.4.4\build\Microsoft.Research.SEALNet.targets" Condition="Exists('..\packages\Microsoft.Research.SEALNet.3.4.4\build\Microsoft.Research.SEALNet.targets')" />
+  <Import Project="..\packages\Microsoft.Research.SEALNet.3.5.1\build\Microsoft.Research.SEALNet.targets" Condition="Exists('..\packages\Microsoft.Research.SEALNet.3.5.1\build\Microsoft.Research.SEALNet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Research.SEALNet.3.4.4\build\Microsoft.Research.SEALNet.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Research.SEALNet.3.4.4\build\Microsoft.Research.SEALNet.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Research.SEALNet.3.5.1\build\Microsoft.Research.SEALNet.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Research.SEALNet.3.5.1\build\Microsoft.Research.SEALNet.targets'))" />
   </Target>
 </Project>
