--- a/CloudFunctionsDemo/CloudBasedFunctions/CloudBasedFunctions/CloudBasedFunctions.csproj
+++ b/CloudFunctionsDemo/CloudBasedFunctions/CloudBasedFunctions/CloudBasedFunctions.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
     <RootNamespace>SEAL_AF_Demo</RootNamespace>
     <Platforms>AnyCPU;x64</Platforms>
@@ -12,9 +12,10 @@
     <None Include="..\README.md" Link="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.10" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
-    <PackageReference Include="Microsoft.Research.SEALNet" Version="3.4.4" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.0.2" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.11" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.6" />
+    <PackageReference Include="Microsoft.Research.SEALNet" Version="3.5.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
