--- a/CloudFunctionsDemo/CloudBasedFunctions/CloudBasedFunctions/Properties/launchSettings.json
+++ b/CloudFunctionsDemo/CloudBasedFunctions/CloudBasedFunctions/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SEAL AF Demo": {
       "commandName": "Executable",
-      "executablePath": "D:\\Progs\\Azure.Functions.Cli.win-x64.2.3.199",
+      "executablePath": "C:\\Users\\kilai\\AppData\\Roaming\\npm\\node_modules\\azure-functions-core-tools\\bin\\func.exe",
       "commandLineArgs": "host start",
       "workingDirectory": "$(TargetDir)"
     }
